--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "morgan": "~1.9.1"
   },
