--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "http-errors": "~1.6.3",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
